--- a/fronpage.html
+++ b/fronpage.html
@@ -60,7 +60,7 @@ p{
     <h2>Its been <span id="time-left2"></span> since Lech Poznan was founded</h2>
 
    
-    <h1>This is how Poznan celbrated 100th aniversary of Lech Poznan</h1>
+    <h1>This is how Poznan celebrated 100th aniversary of Lech Poznan</h1>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/sM1TdWJKoQU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
